--- a/render.yaml
+++ b/render.yaml
@@ -33,7 +33,7 @@ services:
       - key: FLEET_REDIS_ADDRESS
         fromService:
           name: fleet-redis
-          type: pserv
+          type: redis
           property: hostport
       - key: FLEET_SERVER_TLS
         value: 'false'
@@ -60,8 +60,6 @@ services:
         value: fleet
 
   - name: fleet-redis
+    type: redis
     plan: free
-    type: pserv
-    runtime: image
-    image:
-      url: 'redis:7.2.4'
+    maxmemoryPolicy: allkeys-lru
